src/main.css
/* ... */
.modal-behind[data-anim="true"] {
  opacity: 1;
}
.modal-behind .modal {
  transform: translateY(20px);
}
.modal-behind[data-anim="true"] .modal {
  transform: translateY(0);
}

/* ________________MAP__________________ */

.map {
  width: 100%;
  position: relative;
}

.map .actual-map-outer {
  width: 100%;
  height: 100%;
  position: absolute;
}

.map .actual-map {
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: var(--z-map-inactive);
  left: calc(var(--padding-large) * -1);
  transition: transform 1s ease;
  display: grid;
  align-items: center;
}

.map .actual-map[data-active="true"] {
  z-index: var(--z-map-active);
}

.map .actual-map[data-zoom="true"] {
  /* transform: scale(1.5) translateX(-15%); */
}

.map .map-inner {
  position: relative;
}

.map .marker {
  width: 2em;
  position: absolute;
  transform: translateX(-45%) translateY(-120%);
  z-index: calc(var(--z-map-active) + 1);
}
.map .marker svg path {
  pointer-events: none;
}

.map .marker,
.map .actual-map svg path[data-active="true"] {
  /* cursor: help; */
}

.map .marker:hover svg {
  fill: var(--colour-white);
  
}
.map .marker[data-active="true"] > svg {
  transform: scale(1);
}
.map .marker > svg {
  fill: var(--colour-lightgrey);
  transition: transform 0.5s ease;
  transform: scale(0);
}

.map .actual-map svg {
  width: 100%;
  fill: var(--colour-darkgrey);
}
.map .actual-map svg path {
  transition: fill 0.6s ease;
}

.map-bottom-text {
  position: absolute;
  bottom: var(--padding-large);
  width: 100%;
  max-width: 60em;
  padding-left: var(--padding-large);
  padding-right: var(--padding-large);
  z-index: var(--z-info);
}
.map-top-text {
  position: absolute;
  top: var(--padding-large);
  width: 100%;
  max-width: 60em;
  padding-left: var(--padding-large);
  padding-right: var(--padding-large);
  z-index: var(--z-info);
}


/* ________________HOVER__________________ */

@media not all and (hover: none) {
  button:hover {
    background-color: var(--colour-white);
    color: var(--colour-black);
  }
  
  a.text:hover {
    /* font-weight: bolder; */
    text-decoration: underline;
    background-color: rgba(210,100,170,0.4);
  }
}

/* ________________RESP__________________ */

@media screen and (max-width: 40em) {

  :root {
    --padding-large: 1.5em;
  }
  h1.hero {
    font-size: 2.5em;
  }
  h2 {
    font-size: 1.8em;
  }
  h3 {
    font-size: 1.3em;
  }
  
  section.center-title.center {
    text-align: left;
  }
  
  nav.side-progress {
    right: calc(var(--padding) / 2);
  }
  
}

.mobile-map-div {
  width: 100%;
  /* overflow-y: scroll; */
}
.mobile-map-div svg {
  /* height: 100%; */
  width: 300%;
  /* overflow-y: scroll; */
}

